# qhbm-library

./: .coverage.sahilpatelsp-macbookpro2.roam.corp.google.com.33367.342559  .gitignore  .readthedocs.yaml  AUTHORS  README.md  README.rst  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml  ci.yml  dev-release.yaml  dev-release.yml
baselines/: README.md  __init__.py  architectures.py  config.py  launch.py  utils.py
baselines/qhbm/: analyze.py  config.py  train.py
check/: format
docs/: INSTALL.md  contributing.md  install.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst  install.md  qhbmlib.data.rst  qhbmlib.inference.rst  qhbmlib.models.rst  qhbmlib.rst  reference.rst
examples/: qmhl_tutorial.ipython
notebooks/: qmhl_tutorial.ipynb  vqt_tutorial.ipynb
qhbm_library/: architectures.py  architectures_test.py  ebm.py  ebm_test.py  hamiltonian.py  hamiltonian_test.py  qhbm_base.py  qhbm_base_test.py  qmhl.py  qmhl_test.py  test_util.py  util.py  util_test.py  vqt.py  vqt_test.py
qhbmlib/: __init__.py  architectures.py  circuit.py  circuit_infer.py  circuit_infer_utils.py  circuit_model.py  circuit_model_utils.py  ebm.py  energy.py  energy_infer.py  energy_infer_utils.py  energy_model.py  energy_model_utils.py  hamiltonian.py  hamiltonian_infer.py  hamiltonian_infer_utils.py  hamiltonian_model.py  modham.py  orthogonal_ensemble.py  orthogononal_ensemble.py  qhbm.py  qhbm_base.py  qmhl.py  qmhl_loss.py  qnn.py  quantum_data.py  util.py  utils.py  vqt.py  vqt_loss.py  vqt_new.py
qhbmlib/baselines/: geomopt_config.py  geomopt_train.py
qhbmlib/data/: __init__.py  qhbm_data.py  quantum_data.py
qhbmlib/infer/: ebm.py  ebm_utils.py  qhbm.py  qhbm_utils.py  qnn.py  qnn_utils.py
qhbmlib/inference/: __init__.py  ebm.py  ebm_utils.py  qhbm.py  qhbm_utils.py  qmhl_loss.py  qnn.py  qnn_utils.py
qhbmlib/model/: __init__.py  circuit.py  energy.py  energy_utils.py  hamiltonian.py
qhbmlib/models/: __init__.py  circuit.py  circuit_utils.py  energy.py  hamiltonian.py
scripts/: check_format.sh  check_lint.sh  format.sh  prepare_pr.sh
tests/: .#vqt_loss_test.py  __init__.py  architectures_test.py  circuit_infer_test.py  circuit_infer_utils_test.py  circuit_model_test.py  circuit_model_utils_test.py  ebm_test.py  energy_infer_test.py  energy_infer_utils_test.py  energy_model_test.py  energy_model_utils_test.py  hamiltonian_infer_test.py  hamiltonian_infer_utils_test.py  hamiltonian_model_test.py  hamiltonian_test.py  modham_test.py  orthogonal_ensemble_test.py  qhbm_base_test.py  qhbm_test.py  qmhl_loss_test.py  qmhl_test.py  qnn_test.py  quantum_data_test.py  test_util.py  test_util_test.py  util_test.py  utils_test.py  vqt_loss_test.py  vqt_new_test.py  vqt_test.py
tests/data/: qhbm_data_test.py  quantum_data_test.py
tests/infer/: ebm_test.py  ebm_utils_test.py  qhbm_test.py  qhbm_utils_test.py  qnn_test.py  qnn_utils_test.py
tests/inference/: ebm_test.py  ebm_utils_test.py  qhbm_test.py  qhbm_utils_test.py  qmhl_loss_test.py  qnn_test.py  qnn_utils_test.py  vqt_loss_test.py
tests/model/: circuit_test.py  circuit_utils_test.py  energy_test.py  energy_utils_test.py  hamiltonian_test.py
tests/models/: circuit_test.py  hamiltonian_test.py
