[tool.poetry]
name = "qhbm-library"
version = "0.1.0"
description = "Quantum Hamiltonian-Based Models built on TensorFlow Quantum"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/google/qhbm-library"
repository = "https://github.com/google/qhbm-library"
keywords = ["quantum-computing"]
authors = ["The QHBM Library Authors"]

[tool.poetry.dependencies]
python = "~3.8"
tensorflow-quantum = "0.4.0"
tensorflow = "2.3.1"
tensorflow-probability = "0.11.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2.4"
coverage = {extras = ["toml"], version = "~5.5"}
pytest-cov = "~2.11.1"
tox = "^3.23.1"

[tool.coverage.paths]
source = ["qhbm_libary"]

[tool.coverage.run]
branch = true
source = ["qhbm_library"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
